src/test/deca/context/invalid/ContextAvecObjet/ManipulationClasse/equalsArgs.deca
//Description
//  test equals avec trop d'arguments
//
//Résultat
//  Erreur contextuelle ligne 12
//  Le nombre d'arguments entrés dans equals ne correspond pas à sa signature

class A{}
{
    A a = new A();
    int x = 0;
    a.equals(a, x, x);
}